--- a/node_interface/node-interface/package.json
+++ b/node_interface/node-interface/package.json
@@ -15,7 +15,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "typewriter-effect": "^2.21.0",
+    "web3": "^4.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
